--- a/theme/dracula.css
+++ b/theme/dracula.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /**
  * Dracula Dark theme for reveal.js.
  * Based on https://draculatheme.com
@@ -382,33 +381,9 @@ section.has-light-background, section.has-light-background h1, section.has-light
   color: var(--r-inline-code-color);
 }
 
-.reveal ul li {
-  list-style: none;
-}
-
-.reveal ul li::before {
-  content: "•";
+.reveal ul li::marker, .reveal ol li::marker {
   color: var(--r-list-bullet-color);
-  display: inline-block;
-  width: 1em;
-  margin-left: -1em;
 }
-
 .reveal ol {
-  list-style: none;
   counter-reset: li;
-}
-
-.reveal ol li::before {
-  content: counter(li) ".";
-  color: var(--r-list-bullet-color);
-  display: inline-block;
-  width: 2em;
-  margin-left: -2.5em;
-  margin-right: 0.5em;
-  text-align: right;
-}
-
-.reveal ol li {
-  counter-increment: li;
 }
